# playground

./: .gitattributes  .gitignore  .gitmodules  Gemfile  LICENSE  README.md  _config.yml  codecov.yml
.github/workflows/: otlecol-custom.yml  (+5 more)
_data/: navigation.yml
_pages/: catgories.md  index.md  otelcol-custom.md  playground-repo.md  tags.md
_posts/: 2023-10-07-start-otelcol-custom.md  2023-10-11-starting-somewhere.md  2023-11-28-start-otelcol-custom.md
bevy-rust/: Cargo.toml  flake.nix
go-spa/: .gitignore  README.md  flake.nix  go.mod  index.html  main.go  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
i-hate-latex/: .gitignore  .latexmkrc  README.md  flake.nix  main.tex
kotlin-jetbrains-webapp/: .gitignore  README.md  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
otelcol-custom/: .dockerignore  .golangci.yml  Dockerfile  README.md  builder-config.yaml  doc.go  flake.nix  go.mod  go.sum  tools.go
pulumi-go/: flake.nix  go.mod  go.sum  gomod2nix.toml
shuttle-rust/: Cargo.toml  flake.nix
shuttle-rust/discord-bot/: Cargo.toml  Shuttle.toml
shuttle-rust/discord-bot/src/: bot.rs
shuttle-rust/oauth-axum/: Cargo.toml  README.md
shuttle-rust/oauth-axum/src/: main.rs
shuttle-rust/shuttle-discord-bot/: Cargo.toml
shuttle-rust/shuttle-discord-bot/src/: main.rs
tailscale-dns/: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  blocky-config.yml  flake.nix  fly.toml  go.mod  go.sum  main.go
traefik-plugin-tailscale-auth/: .envrc  .golangci.yml  .traefik.yml  README.md  doc.go  flake.nix  go.mod  go.sum  plugin.go
webservice-go/: .envrc  .gitignore  .golangci.yml  Dockerfile  README.md  codecov.yaml  flake.nix  go.mod  go.sum
(+97 files in other folders)
