[package]
name = "oauth-axum"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["multipart", "macros"] }
axum-extra = { version = "0.8.0", features = ["cookie-private"] }
chrono = { version = "0.4.31", features = ["clock"] }
oauth2 = "4.4.2"
reqwest = "0.11.22"
rust-s3 = "0.33.0"
shuttle-axum = "0.28.0"
shuttle-runtime = "0.28.0"
shuttle-secrets = "0.28.0"
shuttle-shared-db = { version = "0.28.0", features = ["postgres", "sqlx"] }
shuttle-static-folder = "0.28.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "macros", "chrono"] }
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tracing = "0.1.37"
