[package]
name = "shuttle-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.28.2"
tracing = "0.1.37"
anyhow = "1.0.71"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.22.0"
shuttle-secrets = "0.22.0"
shuttle-serenity = "0.22.0"
